--- a/card-slider-simple-example/build.gradle
+++ b/card-slider-simple-example/build.gradle
@@ -5,7 +5,7 @@ android {
         config {
             keyAlias 'snapplift'
             keyPassword 'sad136969'
-            storeFile file('D:/razavi/snappliftkey.jks')
+            storeFile file('c:/razavi/snappliftkey.jks')
             storePassword 'sad136969'
         }
     }
@@ -19,8 +19,8 @@ android {
         minSdkVersion 19
         targetSdkVersion 28
         multiDexEnabled true
-        versionCode 18
-        versionName "2.7"
+        versionCode 19
+        versionName "2.8"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
     }
@@ -54,7 +54,7 @@ dependencies {/*
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    implementation 'co.ronash.android:pushe-base:1.4.1'
+    implementation 'co.ronash.android:pushe-base:1.4.3'
     implementation 'com.github.javiersantos:AppUpdater:2.7'
     implementation 'com.android.support:palette-v7:28.0.0'
     implementation 'uk.co.chrisjenx:calligraphy:2.3.0'
@@ -95,4 +95,5 @@ dependencies {/*
     implementation 'com.google.android.gms:play-services-gcm:16.0.0'
     implementation 'com.google.android.gms:play-services-location:16.0.0'
     implementation 'com.google.android.gms:play-services-ads:16.0.0'
+    implementation 'com.github.gcacace:signature-pad:1.2.1'
 }
